fixed my text-align/image

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,10 @@ p {
 .middle {
   text-align: center;
 }
+.about-section h1 {
+  font-size: 64px;
+  line-height: 1.5;
+}
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
@@ -66,9 +70,6 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
-}
-.project-description {
-  padding: 120px 60px;
 }
 
 @media (max-width: 900px) {
